--- a/mcserver/banned-players.html
+++ b/mcserver/banned-players.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
     <head>
-        <meta
-            charset="utf-8"
-            id="viewport"
-            name="viewport"
-            content="width=device-width, initial-scale=1" />
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1" />
         <title>RSJEMC黑名单</title>
 
         <style>
@@ -570,11 +566,7 @@
         <article class="markdown-body">
             <p>
                 <u
-                    ><a
-                        href="/mcserver/index.html"
-                        style="font-size: 1.1em"
-                        ><strong>←返回</strong></a
-                    ></u
+                    ><a href="/mcserver/index.html" style="font-size: 1.1em"><strong>←返回</strong></a></u
                 >
             </p>
             <h2>黑名单</h2>
@@ -586,11 +578,7 @@
             </ol>
             <hr />
             <p>
-                <a
-                    href="#top"
-                    style="font-size: 1.1em"
-                    ><strong>⤒返回顶部</strong></a
-                >
+                <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
             </p>
         </article>
     </body>
