--- a/pid/old/index.html
+++ b/pid/old/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta
-            charset="utf-8"
-            id="viewport"
-            name="viewport"
-            content="width=device-width, initial-scale=1" />
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1" />
         <title>验证产品识别码(RSPID)</title>
 
         <style>
@@ -574,24 +570,10 @@
                 示例:<code>51231130152930002619332046014</code>。
                 <p style="padding: 0.35em 1.15em; color: #ff4800">本验证程序适用于2023/09/16及以后的产品识别码(RSPID-29位)。</p>
             </blockquote>
-            <h4>
-                下方输入RSPID：<input
-                    type="button"
-                    value="粘贴"
-                    onclick="paste()"
-                    style="font-weight: 400; font-size: 1em; margin-left: 1em" />
-            </h4>
+            <h4>下方输入RSPID：<input type="button" value="粘贴" onclick="paste()" style="font-weight: 400; font-size: 1em; margin-left: 1em" /></h4>
             <p>
-                <input
-                    type="text"
-                    id="pid"
-                    size="29"
-                    maxlength="29" />
-                <input
-                    type="button"
-                    value="验证"
-                    onclick="verify()"
-                    style="font-weight: 500; font-size: 1.1em; margin-left: 0.15em" />
+                <input type="text" id="pid" size="29" maxlength="29" />
+                <input type="button" value="验证" onclick="verify()" style="font-weight: 500; font-size: 1.1em; margin-left: 0.15em" />
             </p>
             <strong
                 ><p style="line-height: 1em">状态：<a id="zt"></a></p
