--- a/beta/index.html
+++ b/beta/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
     <head>
-        <meta
-            charset="utf-8"
-            id="viewport"
-            name="viewport"
-            content="width=device-width, initial-scale=1" />
+        <meta charset="utf-8" id="viewport" name="viewport" content="width=device-width, initial-scale=1" />
         <title>Beta开发测试</title>
-        <link
-            rel="stylesheet"
-            href="./katex.min.css" />
+        <link rel="stylesheet" href="./katex.min.css" />
         <style>
             html,
             body {
@@ -752,18 +746,7 @@
             <p style="color: #6d6d6d; line-height: 10%">@media无法检测横竖屏-绿色</p>
             <p style="color: #6d6d6d; line-height: 10%">(显示为绿色建议更新浏览器)</p>
             <p style="color: #6d6d6d; line-height: 10%"><s>不支持background-color-白色</s></p>
-            <u
-                ><a
-                    href="/blank.html"
-                    target="_blank"
-                    >空白页↗</a
-                >;
-                <a
-                    href="/404.html"
-                    target="_blank"
-                    >404页↗</a
-                >;</u
-            >
+            <u><a href="/blank.html" target="_blank">空白页↗</a>; <a href="/404.html" target="_blank">404页↗</a>;</u>
             <h1>我是一级标题</h1>
             <h2>我是二级标题</h2>
             <h3>我是三级标题</h3>
@@ -845,20 +828,14 @@
             </blockquote>
             <hr />
             <p>
-                <a
-                    href="https://github.com/risingsun517/risingsun517.github.io"
-                    target="_blank"
-                    >上面是分割线，我是超链接，下面是公式块(Katex)</a
-                >
+                <a href="https://github.com/risingsun517/risingsun517.github.io" target="_blank">上面是分割线，我是超链接，下面是公式块(Katex)</a>
             </p>
             <p>
                 <span style="display: block; border: 1px solid transparent"
                     ><span class="katex-display"
                         ><span class="katex"
                             ><span class="katex-mathml"
-                                ><math
-                                    xmlns="http://www.w3.org/1998/Math/MathML"
-                                    display="block"
+                                ><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"
                                     ><semantics
                                         ><mrow
                                             ><mi>x</mi><mo>=</mo><msub><mi>v</mi><mn>0</mn></msub
@@ -867,92 +844,40 @@
                                         ><annotation encoding="application/x-tex">x=v_0t+ \dfrac{ 1 }{ 2 } at^2</annotation></semantics
                                     ></math
                                 ></span
-                            ><span
-                                class="katex-html"
-                                aria-hidden="true"
+                            ><span class="katex-html" aria-hidden="true"
+                                ><span class="base"><span class="strut" style="height: 0.4306em"></span><span class="mord mathnormal">x</span><span class="mspace" style="margin-right: 0.2778em"></span><span class="mrel">=</span><span class="mspace" style="margin-right: 0.2778em"></span></span
                                 ><span class="base"
-                                    ><span
-                                        class="strut"
-                                        style="height: 0.4306em"></span
-                                    ><span class="mord mathnormal">x</span
-                                    ><span
-                                        class="mspace"
-                                        style="margin-right: 0.2778em"></span
-                                    ><span class="mrel">=</span
-                                    ><span
-                                        class="mspace"
-                                        style="margin-right: 0.2778em"></span></span
-                                ><span class="base"
-                                    ><span
-                                        class="strut"
-                                        style="height: 0.7651em; vertical-align: -0.15em"></span
+                                    ><span class="strut" style="height: 0.7651em; vertical-align: -0.15em"></span
                                     ><span class="mord"
-                                        ><span
-                                            class="mord mathnormal"
-                                            style="margin-right: 0.03588em"
-                                            >v</span
+                                        ><span class="mord mathnormal" style="margin-right: 0.03588em">v</span
                                         ><span class="msupsub"
                                             ><span class="vlist-t vlist-t2"
                                                 ><span class="vlist-r"
-                                                    ><span
-                                                        class="vlist"
-                                                        style="height: 0.3011em"
+                                                    ><span class="vlist" style="height: 0.3011em"
                                                         ><span style="top: -2.55em; margin-left: -0.0359em; margin-right: 0.05em"
-                                                            ><span
-                                                                class="pstrut"
-                                                                style="height: 2.7em"></span
-                                                            ><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">0</span></span></span
+                                                            ><span class="pstrut" style="height: 2.7em"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">0</span></span></span
                                                         ></span
                                                     ><span class="vlist-s">​</span></span
                                                 ><span class="vlist-r"
-                                                    ><span
-                                                        class="vlist"
-                                                        style="height: 0.15em"
-                                                        ><span></span></span></span></span></span></span
-                                    ><span class="mord mathnormal">t</span
-                                    ><span
-                                        class="mspace"
-                                        style="margin-right: 0.2222em"></span
-                                    ><span class="mbin">+</span
-                                    ><span
-                                        class="mspace"
-                                        style="margin-right: 0.2222em"></span></span
+                                                    ><span class="vlist" style="height: 0.15em"><span></span></span></span></span></span></span
+                                    ><span class="mord mathnormal">t</span><span class="mspace" style="margin-right: 0.2222em"></span><span class="mbin">+</span><span class="mspace" style="margin-right: 0.2222em"></span></span
                                 ><span class="base"
-                                    ><span
-                                        class="strut"
-                                        style="height: 2.0074em; vertical-align: -0.686em"></span
+                                    ><span class="strut" style="height: 2.0074em; vertical-align: -0.686em"></span
                                     ><span class="mord"
                                         ><span class="mopen nulldelimiter"></span
                                         ><span class="mfrac"
                                             ><span class="vlist-t vlist-t2"
                                                 ><span class="vlist-r"
-                                                    ><span
-                                                        class="vlist"
-                                                        style="height: 1.3214em"
+                                                    ><span class="vlist" style="height: 1.3214em"
                                                         ><span style="top: -2.314em"
-                                                            ><span
-                                                                class="pstrut"
-                                                                style="height: 3em"></span
-                                                            ><span class="mord"><span class="mord">2</span></span></span
-                                                        ><span style="top: -3.23em"
-                                                            ><span
-                                                                class="pstrut"
-                                                                style="height: 3em"></span
-                                                            ><span
-                                                                class="frac-line"
-                                                                style="border-bottom-width: 0.04em"></span></span
+                                                            ><span class="pstrut" style="height: 3em"></span><span class="mord"><span class="mord">2</span></span></span
+                                                        ><span style="top: -3.23em"><span class="pstrut" style="height: 3em"></span><span class="frac-line" style="border-bottom-width: 0.04em"></span></span
                                                         ><span style="top: -3.677em"
-                                                            ><span
-                                                                class="pstrut"
-                                                                style="height: 3em"></span
-                                                            ><span class="mord"><span class="mord">1</span></span></span
+                                                            ><span class="pstrut" style="height: 3em"></span><span class="mord"><span class="mord">1</span></span></span
                                                         ></span
                                                     ><span class="vlist-s">​</span></span
                                                 ><span class="vlist-r"
-                                                    ><span
-                                                        class="vlist"
-                                                        style="height: 0.686em"
-                                                        ><span></span></span></span></span></span
+                                                    ><span class="vlist" style="height: 0.686em"><span></span></span></span></span></span
                                         ><span class="mclose nulldelimiter"></span></span
                                     ><span class="mord mathnormal">a</span
                                     ><span class="mord"
@@ -960,14 +885,9 @@
                                         ><span class="msupsub"
                                             ><span class="vlist-t"
                                                 ><span class="vlist-r"
-                                                    ><span
-                                                        class="vlist"
-                                                        style="height: 0.8641em"
+                                                    ><span class="vlist" style="height: 0.8641em"
                                                         ><span style="top: -3.113em; margin-right: 0.05em"
-                                                            ><span
-                                                                class="pstrut"
-                                                                style="height: 2.7em"></span
-                                                            ><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span
+                                                            ><span class="pstrut" style="height: 2.7em"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span
                                                         ></span
                                                     ></span
                                                 ></span
@@ -989,30 +909,8 @@
                                 ><annotation encoding="application/x-tex">F=ma</annotation></semantics
                             ></math
                         ></span
-                    ><span
-                        class="katex-html"
-                        aria-hidden="true"
-                        ><span class="base"
-                            ><span
-                                class="strut"
-                                style="height: 0.6833em"></span
-                            ><span
-                                class="mord mathnormal"
-                                style="margin-right: 0.13889em"
-                                >F</span
-                            ><span
-                                class="mspace"
-                                style="margin-right: 0.2778em"></span
-                            ><span class="mrel">=</span
-                            ><span
-                                class="mspace"
-                                style="margin-right: 0.2778em"></span></span
-                        ><span class="base"
-                            ><span
-                                class="strut"
-                                style="height: 0.4306em"></span
-                            ><span class="mord mathnormal">ma</span></span
-                        ></span
+                    ><span class="katex-html" aria-hidden="true"
+                        ><span class="base"><span class="strut" style="height: 0.6833em"></span><span class="mord mathnormal" style="margin-right: 0.13889em">F</span><span class="mspace" style="margin-right: 0.2778em"></span><span class="mrel">=</span><span class="mspace" style="margin-right: 0.2778em"></span></span><span class="base"><span class="strut" style="height: 0.4306em"></span><span class="mord mathnormal">ma</span></span></span
                     ></span
                 >
             </p>
