--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,8 @@
         <!-- iOS web app -->
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="apple-touch-icon-precomposed" href="" sizes="1024x1024" />
+        <link rel="apple-touch-icon-precomposed" href="/icon.png" sizes="1024x1024" />
+        <link rel="icon" href="/icon.png" type="image/png" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <title>RS9C | Index</title>
         <style>
@@ -48,81 +49,11 @@
             }
             @font-face {
                 font-family: "SiyuanHei";
-                src: url(/fonts/SiyuanHei/SourceHanSansSC-Regular.otf) format("opentype");
-                font-weight: normal;
-            }
-            @font-face {
-                font-family: "SiyuanHei";
-                src: url(/fonts/SiyuanHei/SourceHanSansSC-Bold.otf) format("opentype");
-                font-weight: bold;
+                src: url(/fonts/SiyuanHei/SourceHanSansCN-VF.ttf.woff2) format("woff2");
             }
             @font-face {
                 font-family: "SiyuanSong";
-                src: url(/fonts/SiyuanSong/SourceHanSerifSC-Regular.otf) format("opentype");
-                font-weight: normal;
-            }
-            @font-face {
-                font-family: "SiyuanSong";
-                src: url(/fonts/SiyuanSong/SourceHanSerifSC-Bold.otf) format("opentype");
-                font-weight: bold;
-            }
-            * {
-                margin: 0;
-                padding: 0;
-                font-family: "SiyuanHei";
-                font-weight: normal;
-            }
-            body {
-                background-color: #f7f7f7;
-                display: flex;
-                flex-direction: column;
-            }
-            .header {
-                display: flex;
-                height: 46px;
-                background-color: #ffffffcc;
-                box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px;
-                z-index: 1000;
-                position: fixed;
-                top: 0;
-                width: 100%;
-                backdrop-filter: blur(7px);
-            }
-            .top {
-                display: flex;
-                height: 250px;
-                margin-top: 46px;
-            }
-            .card {
-                display: flex;
-                background-color: #ffffff;
-                box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 5px;
-                height: 70px;
-                margin-left: 5vh;
-                margin-right: 5vh;
-                margin-bottom: 30px;
-                padding: 10px;
-            }
-            .menu-button {
-                cursor: pointer;
-                display: block;
-                position: fixed;
-                height: 26px;
-                width: 26px;
-                top: 0px;
-                left: 0px;
-                padding: 18px 0px 0px 18px;
-            }
-            .menu-button-bar {
-                display: block;
-                width: 18px;
-                height: 2px;
-                background-color: #24292e;
-                opacity: 1;
-                border-radius: 5px;
-                margin: 0 0 3px 0;
-                transition: none;
-                transform-origin: center;
+                src: url(/fonts/SiyuanSong/SourceHanSerifCN-VF.ttf.woff2) format("woff2");
             }
             @keyframes top-bar {
                 0% {
@@ -215,6 +146,59 @@
             .menu-button:not(.active) .menu-button-bar:nth-child(3) {
                 animation: bottom-bar-reverse 0.3s forwards;
             }
+            :root {
+                --theme-color: #ff3300;
+                --font-color: #24292e;
+                --bottom-icon-color: #d9d9d9;
+            }
+            * {
+                margin: 0;
+                padding: 0;
+                font-family: "SiyuanHei";
+                font-weight: 400;
+                color: var(--font-color);
+                /* scrollbar-width: none; */
+            }
+            body {
+                background-color: #f7f7f7;
+                display: flex;
+                flex-direction: column;
+            }
+            .header {
+                display: flex;
+                height: 46px;
+                background-color: #ffffffcc;
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px;
+                z-index: 1000;
+                position: fixed;
+                top: 0;
+                width: 100%;
+                backdrop-filter: blur(7px);
+                flex-direction: row;
+                justify-content: flex-end;
+                align-items: center;
+            }
+            .menu-button {
+                cursor: pointer;
+                display: block;
+                position: fixed;
+                height: 26px;
+                width: 26px;
+                top: 0px;
+                left: 0px;
+                padding: 18px 0px 0px 18px;
+            }
+            .menu-button-bar {
+                display: block;
+                width: 18px;
+                height: 2px;
+                background-color: var(--font-color);
+                opacity: 1;
+                border-radius: 5px;
+                margin: 0 0 3px 0;
+                transition: none;
+                transform-origin: center;
+            }
             .logo {
                 display: flex;
                 align-items: center;
@@ -229,10 +213,91 @@
                 user-select: none;
                 z-index: 1002;
                 padding-top: 1px;
-                color: #ff3300;
+                color: var(--theme-color);
+                user-select: none;
             }
-            /* 适配竖屏 */
-            /* @media (max-width: 640px) {
+            #today {
+                display: flex;
+                flex-direction: row;
+                justify-self: center;
+                align-items: center;
+                padding-left: 5px;
+                font-family: "SiyuanHei";
+                font-size: 13px;
+                height: 46px;
+                color: var(--theme-color);
+                cursor: default;
+            }
+            .header box-icon {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 46px;
+                width: 46px;
+                padding: 10px;
+                cursor: pointer;
+            }
+            #top {
+                display: flex;
+                height: 250px;
+                margin-top: 46px;
+                text-align: center;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                font-family: "SiyuanHei";
+                font-size: 40px;
+                font-weight: 700;
+                padding: 0 5vh 0 5vh;
+                overflow: hidden;
+            }
+            .card {
+                display: flex;
+                background-color: #ffffff;
+                box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 5px;
+                height: 70px;
+                margin-left: 5vh;
+                margin-right: 5vh;
+                margin-bottom: 40px;
+                padding: 25px;
+                border-radius: 15px;
+                transition: all 0.3s ease-in-out;
+            }
+            .card:hover {
+                box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px;
+                transition: all 0.3s ease-in-out;
+            }
+            .bottom {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            .divider {
+                width: 90%;
+                height: 1px;
+                border: 0;
+                background: #dedede;
+                margin: 0 auto 20px;
+            }
+            .to-top {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--bottom-icon-color);
+                height: 30px;
+                width: 100px;
+                padding: 5px;
+                border-radius: 10px;
+                text-decoration: none;
+                transition: all 0.3s ease-in-out;
+            }
+            .to-top:hover {
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px;
+                transition: all 0.1s ease-in-out;
+            }
+            /* 适配横屏 */
+            /* @media screen and (min-width: 768px) {
             } */
             /* 适配深色模式 */
             /* @media (prefers-color-scheme: dark) {
@@ -250,12 +315,17 @@
                 <span class="menu-button-bar"></span>
                 <span class="menu-button-bar"></span>
             </div>
-            <div class="logo">rISINGSUN</div>
+            <div class="logo">
+                RISINGSUN
+                <div id="today">今天什么日子</div>
+            </div>
+            <box-icon name="user-circle" color="var(--font-color)"></box-icon>
+            <box-icon name="search" color="var(--font-color)"></box-icon>
         </div>
         <!-- 内容区 -->
-        <div style="display: flex; flex-direction: column; flex: 1; overflow: auto">
+        <div style="display: flex; flex-direction: column; flex: 1; overflow: auto; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
             <!-- 置顶内容区 -->
-            <div class="top">???</div>
+            <div id="top"></div>
             <!-- 内容区卡片 -->
             <div>
                 <div class="card">
@@ -264,33 +334,77 @@
                 </div>
                 <div class="card" style="font-family: 'SiyuanSong'">
                     我是一个
-                    <div style="font-family: 'SiyuanSong'; font-weight: bold">卡片</div>
+                    <div style="font-family: 'SiyuanSong'; font-weight: 700">卡片</div>
                 </div>
-                <div class="card" style="font-weight: bold">显示普通通知</div>
-                <div class="card" style="font-weight: bold">显示警告通知</div>
-                <div class="card" style="font-weight: bold">显示错误通知</div>
+                <div class="card" style="font-weight: 700">显示普通通知</div>
+                <div class="card" style="font-weight: 700">显示警告通知</div>
+                <div class="card" style="font-weight: 700">显示错误通知</div>
                 <div class="card">你好，世界！</div>
                 <div class="card" style="font-family: 'JetBrainsMono'">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-weight: bold">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-style: italic">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-style: italic; font-weight: bold">Hello World!</div>
                 <div class="card" style="font-family: 'XBC'">RISINGSUN BoringClub 2025</div>
-                <div class="card" style="font-family: 'RSLOGO'; font-size: 25px">rISINGSUN GROUP 2025</div>
+                <div class="card" style="font-family: 'RSLOGO'; font-size: 25px">RISINGSUN GROUP 2025</div>
             </div>
+            <!-- 底栏 -->
+            <div class="bottom">
+                <hr class="divider" />
+                <a href="#top" class="to-top"><box-icon name="arrow-to-top" color="var(--font-color)"></box-icon>返回顶部</a>
+                <a href="/quote.html" style="display: flex; justify-items: center; align-items: center; margin: 15px; text-decoration: none; color: var(--bottom-icon-color)"><box-icon name="github" type="logo" color="var(--bottom-icon-color)"></box-icon>引用的开源项目</a>
+            </div>
+            <!-- 路径 -->
+            <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">示例/示例主页</p>
         </div>
     </body>
     <!-- boxicons: https://boxicons.com/ https://github.com/atisawd/boxicons -->
     <!-- 调用方法 -->
     <!-- <box-icon type = "regular|solid|logo" name="adjust|alarms|etc...." color="blue|red|etc..." size="xs|sm|md|lg|cssSize" rotate="90|180|270" flip="horizontal|vertical" border="square|circle" animation="spin|tada|etc..." pull = "left|right"></box-icon> -->
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
     <script>
+        /**
+         * @description: 延时（毫秒）
+         * @param {Number} ms
+         */
+        function sleep(ms) {
+            return new Promise((resolve) => setTimeout(resolve, ms));
+        }
         document.addEventListener("DOMContentLoaded", () => {
-            // 监听菜单按钮点击事件
+            // 监听按钮点击事件
             const menuButton = document.querySelector(".menu-button");
             menuButton.addEventListener("click", function (e) {
                 e.preventDefault();
                 this.classList.toggle("active");
             });
+            const logo = document.querySelector(".logo");
+            logo.addEventListener("click", function (e) {
+                window.location.href = "/index.html";
+            });
+            // 初始化
+            showTopContent();
         });
+        /**
+         * @description: 显示置顶内容
+         */
+        async function showTopContent() {
+            await sleep(1000);
+            document.getElementById("top").innerHTML = "_";
+            await sleep(500);
+            document.getElementById("top").innerHTML = " ";
+            await sleep(500);
+            document.getElementById("top").innerHTML = "_";
+            await sleep(500);
+            document.getElementById("top").innerHTML = " ";
+            await sleep(300);
+            const topContent = "正如你所见，这里什么都没有。";
+            for (i in topContent) {
+                document.getElementById("top").innerHTML += topContent[i];
+                await sleep(150);
+            }
+            document.getElementById("top").innerHTML += "<br />";
+            await sleep(500);
+            document.getElementById("top").innerHTML += ":D";
+            return;
+        }
     </script>
 </html>
