--- a/example/index.html
+++ b/example/index.html
@@ -154,7 +154,7 @@
             * {
                 margin: 0;
                 padding: 0;
-                font-family: "SiyuanHei";
+                font-family: "SiyuanHei", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
                 font-weight: 400;
                 color: var(--font-color);
                 /* scrollbar-width: none; */
@@ -247,18 +247,21 @@
                 align-items: center;
                 font-family: "SiyuanHei";
                 font-size: 40px;
-                font-weight: 700;
+                font-weight: 600;
                 padding: 0 5vh 0 5vh;
                 overflow: hidden;
+            }
+            .grid-container {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                gap: 40px;
+                padding: 0 5vh 0 5vh;
             }
             .card {
                 display: flex;
                 background-color: #ffffff;
                 box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 5px;
                 height: 70px;
-                margin-left: 5vh;
-                margin-right: 5vh;
-                margin-bottom: 40px;
                 padding: 25px;
                 border-radius: 15px;
                 transition: all 0.3s ease-in-out;
@@ -278,7 +281,7 @@
                 height: 1px;
                 border: 0;
                 background: #dedede;
-                margin: 0 auto 20px;
+                margin: 40px auto 20px;
             }
             .to-top {
                 display: flex;
@@ -327,7 +330,7 @@
             <!-- 置顶内容区 -->
             <div id="top"></div>
             <!-- 内容区卡片 -->
-            <div>
+            <div class="grid-container">
                 <div class="card">
                     这是什么？<br />666
                     <box-icon type="regular" name="qr-scan" color="#0ea1ff" animation="tada-hover"></box-icon>
