细节，改了睡觉

--- a/example/index.html
+++ b/example/index.html
@@ -323,7 +323,7 @@
                 width: 90%;
                 height: 1px;
                 border: 0;
-                background: #dedede;
+                background: var(--bottom-icon-color);
                 margin: 40px auto 20px;
             }
             .to-top {
