--- a/example/index.html
+++ b/example/index.html
@@ -315,7 +315,7 @@
                 background-color: #ffffff;
                 box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 5px;
                 height: 70px;
-                padding: 15px 25px 15px;
+                padding: 25px;
                 border-radius: 15px;
                 transition: all 0.3s ease-in-out;
                 flex-direction: column;
@@ -440,9 +440,9 @@
                 position: fixed;
                 top: 51px;
                 width: 100%;
-                justify-items: center;
                 align-items: center;
                 z-index: 990;
+                pointer-events: none;
             }
             .notification {
                 display: flex;
@@ -461,6 +461,7 @@
                 white-space: pre-wrap;
                 overflow-wrap: break-word;
                 animation: notification-show 0.2s ease-out forwards;
+                pointer-events: all;
             }
             .notification.hiding {
                 animation: notification-hide 0.2s ease-in forwards;
@@ -642,6 +643,7 @@
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script>
         // 变量声明
+
         let isMenuShown = false;
         const menuButton = document.querySelector(".menu-button");
         const menuButtonBars = document.querySelectorAll(".menu-button-bar");
