--- a/example/index.html
+++ b/example/index.html
@@ -407,6 +407,15 @@
                 transition: all 0.3s ease-in-out;
                 scrollbar-width: none;
             }
+            #wide-menu-back-area {
+                position: fixed;
+                opacity: 0;
+                top: 0;
+                left: 0;
+                width: 0;
+                height: 0;
+                z-index: 0;
+            }
             .menu-item-title {
                 display: flex;
                 justify-content: flex-start;
@@ -452,7 +461,7 @@
                 max-width: 300px;
                 margin: 5px 0;
                 padding: 10px;
-                font-size: 14px;
+                font-size: 16px;
                 z-index: 1491;
                 border: 1px solid;
                 border-radius: 10px;
@@ -551,6 +560,14 @@
                     box-shadow: rgba(0, 0, 0, 0.1) 3px 0px 5px;
                     transform: translateX(-100%);
                 }
+                #wide-menu-back-area.active {
+                    position: fixed;
+                    top: 0;
+                    left: 375px;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 1499;
+                }
             }
             /* 宽屏深色 */
             @media screen and (min-width: 600px) and (prefers-color-scheme: dark) {
@@ -576,6 +593,7 @@
             <box-icon name="search" color="var(--font-color)" id="search-button"></box-icon>
         </div>
         <div id="menu" class="no-animation"></div>
+        <div id="wide-menu-back-area"></div>
         <div id="notification-container"></div>
         <!-- 内容区 -->
         <div style="display: flex; flex-direction: column; flex: 1; overflow: scroll; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
@@ -653,6 +671,7 @@
         const searchButton = document.getElementById("search-button");
         const menuContainer = document.getElementById("menu");
         const notificationContainer = document.getElementById("notification-container");
+        const wideMenuBackArea = document.getElementById("wide-menu-back-area");
 
         // 函数
 
@@ -748,10 +767,17 @@
             e.preventDefault();
             menuContainer.classList.toggle("active");
             menuButton.classList.toggle("active");
+            wideMenuBackArea.classList.toggle("active");
             menuButtonBars.forEach((bar) => {
                 bar.classList.remove("no-animation");
             });
             menuContainer.classList.remove("no-animation");
+        });
+        wideMenuBackArea.addEventListener("click", function (e) {
+            e.preventDefault();
+            menuContainer.classList.toggle("active");
+            menuButton.classList.toggle("active");
+            wideMenuBackArea.classList.toggle("active");
         });
         logo.addEventListener("click", function (e) {
             e.preventDefault();
@@ -790,7 +816,7 @@
                     }
                 })
                 .catch((e) => {
-                    showNotification("菜单初始化失败\n" + e, "e");
+                    showNotification("菜单初始化失败\n" + e, "e", 10000);
                 });
         });
     </script>
