week2: 代码块样式

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     <script>
         let getContent = window.location.search.substring(window.location.search.lastIndexOf("=") + 1, window.location.search.length);
         if (getContent === undefined || getContent === null || getContent === "") {
-            alert('你在地址栏输入了什么？啥都木有╮(￣▽￣"")╭');
+            alert('页面不见了╮(￣▽￣"")╭');
             window.location.href = "/index.html";
         } else {
             // 将getContent进行URL解码
