week2: 本周最后一次提交 TODO： 1 .#today显示节日、节气等； 2. logo颜色可根据颜色变化。

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>RS9C</title>
+        <title>404 Not Found | RS9C</title>
         <style>
             body {
                 background-color: #f7f7f7;
