--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" href="/icon.png" type="image/png" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-        <title>RS9C | 示例主页</title>
+        <title>示例主页 | RS9C</title>
         <style>
             @font-face {
                 font-family: "JetBrainsMono";
@@ -643,7 +643,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    你好，世界！
+                    <div><b>Tips: </b>点按通知可关闭</div>
                     <div class="button-container">
                         <button class="hollow" onclick="showNotification('HELLO WORLD!','i',10000)">知道了</button>
                     </div>
