--- a/example/index.html
+++ b/example/index.html
@@ -198,7 +198,7 @@
                 --font-color: #24292e;
                 --bottom-icon-color: #d9d9d9;
                 --notification-i-color: #1565c0;
-                --notification-w-color: #f57f17;
+                --notification-w-color: #dd5100;
                 --notification-e-color: #c62828;
             }
             * {
